--- a/vacations/vacations/PositionsFrm.resx
+++ b/vacations/vacations/PositionsFrm.resx
@@ -123,76 +123,78 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAK+SURBVGhD7Zk7bxQxEMdPvApKHhWPL4FApEqHllvf2Svl
-        BIKer0BEc12gDwgiPkG4W1tKSBoKPgMIPgCPCgg10MDM3qSxxmRnH86ttD/pL0W68fh/m7U9nhv09PTU
-        Z/JqclJZs5I6/Ug5nae5+ajm5qdy6k8h+HtozYfiM4gZ5dnN6XR6goYfH9rpK2D8CeircuavTKMv8GUe
-        J3l2mdLFI9leu6jy8Vbi1G/eXHlhjqHTz9WOukDp2wVeg3vw9A44M3V026kfaZ7dpWma59rWg9OpNS+5
-        yZsUzPEC56JpmwH+vWdTN97nJmxF1uzhnDR9PYonH9P8oax5A7vbGbJRnRivTUi4uMlGNWBR3ecSx5W+
-        Q3ZkGGvOJ3PznU8aU7DjVdlicZ/nE8YXvMbPyFY58HSse0j5cDFlVXjZUVfJ3tEU5QGTSCIfLkYiLDvI
-        3v/BIgvrFC6JRD5cjEhQb2HRSDbDQOAKm0AoHy5GKlgLN8hmmEVJzCeQyIeLEcuadbIZBoIsO1goHy5G
-        LGtmZDPM4uLBDBbKh4sRa27ek80wklK5KbjcnPBgJZthJPt/U3C5Wc3ML7IZpvNfoPOvUPcXcde30WU+
-        yOCC85BshsGmEzdYKh8uRqw8u042w2AxN5yZz2wCgXy4GIkSaz6V7uZh6colkciHi5FJb5C9o1m2Cw3u
-        /+lueonslaNo93HJjkV6k2yV59b22rlluNRjy7Fy3xR7lVzSmEptNiE71cBeJZc4hmAzeUo2qoP30GFu
-        HDdBu9KvV9+uniIb9cBGKxzje/xEzSt1493GmruHYJM3xs6Er01jT54De5Xt7E7jb7UXbFmwb4rtPjxg
-        eDMCFTn0Jm7blD4eeDpi2VGldlqM0RviE7YNsMjCphMs9HWs2fHigTc7LEcWJcnoAC5K7/AzLImxqlyK
-        n1l7ejrPYPAPE7prEVg0HOwAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMfSURBVFhH7VdNaxRBEN34edGAon/AD5D8AK+5ubPTPTOd
+        xYAYUUHIXYIHRdyDCOJFFMGTCAriTna7k6gBCeghBol4UiSiiELUSxIICvkw6li1WxsXpmayOzMeFB88
+        WNiu92p7q6urc//xT8MatTbLkeI+Ue3ps413XRpnsmDErPS9FcuI5cKg+iSM96Sg1WVhirYz7Ozpf96/
+        kcKzQ3epe4PUqiC154tB9T5vxHdpVBBHWLMM699I491wh9yuXJDrILn0kNo9BbsxJ331kzOPYz15Z9rW
+        6gjJJUaHqBR3CeOWOaMkFFpdPVA+uJ302wMmYxt3HH7hD048CfFvhKRuWaN9nWTTOnBnskxmlb5agcK/
+        RjZro9fvXQ8FDDXDiGVIoZ1jpVJpHdlGwxnusaSGAmZEsqSoqleWVrvJlgfszqZaEbdxmh5+GAvml+Zr
+        PP/0AruG5aBagV52ohTE7JKsQNODPsMKRHD840TQwMVnl9g1kayqx9BsowtcmuLhet9ggiOYJiE6dfvJ
+        Poz6dcAHRzHVDiG1Okf2YUjTM8kGxTCDhMbIPox8Rc2wQUQsYEygmTMLs5ROEEzNvQ59f2fqLqvVIF7I
+        ZB+GMPIbF9QgnqR28WLmJau1Sl8tkX0YcBSX2CDin0gor8UC2YeB28cFNYh9Buukmfg3NWDeDoe+Pz1+
+        ltX6Tfcd2YcBfWGCD4om1kkDmAC3JpZaPSD7MHDSY4NimDYhuGgHyD4MGDlsbFZcYBTTJJT31Rfw3Ev2
+        YeAMXB87eQGOaRKCe/Me3J9byD4MHMhxBm7n+sA+gycJuXYBN1F7i6LqHlpzBLHKbheMH9OsSJYcUhNW
+        2dpJtjGA1wEO5KxIhhQVzwa31l8iQntXsItyYmloG/EVTtYZsmkd4r7YBlPdTZyBOeEkxFMlq+5JfHCS
+        TXuAB95WHMg58STEnUmcTDPEkHsUZ+BEu4WnCZ7X+PIlufTAo4kDuWO84yD8qJXmWWt60GfwaMsRuQNk
+        sntKN1BL7LbViWMnTno4XEkjP9dGUeMt4kWJdxN8HsAOjE2vpafOf/y9yOV+Ae7SHTzQZQ9dAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWMSURBVGhD7VlvbFNVFF9E8F9i4r8YNQZNUGn7bgdOUeOf
-        ytq1+MGAwoBEhvFf1IgGjMmMixkf/OBEP6kk00E7NyRMwQ+G6WLb+zoRZ9wgGMxUkCgqanAKcdi+1/qe
-        5zxOx217+9qu7Zaa/ZKTtvece+/v3Hfuuefd1s1gBjMoHyb3nK1z9x26qrTrKvsgqbLReNjxZ1x1JEHG
-        oe0HaBvWudKtcfZoIsJuoK7Ti3jMfW2Ss9c0lf0GBM0SZT849IQxNO9CGm7qYISVy4H4FlhlXUKsJImr
-        zhM6Z+vxKdLw1UUqxh6EsPhLRqY8UQ7qUfctNE3lYR50zkmqrqB8clhJiHmMcXRQi7EbjU/mX2L2Nc8y
-        BtwXGBHHXNgHd8IeadWirv58Ty6usoTGlYdoysoBScDmG5BNiiuX4soao3/eOWReEEZs/hXgUFtCZX9I
-        x+TsZTItH7jyMvJWduHKOlxlMi0Zxl7nxbAAm+Oc/Zs9PjpIZuUBN2vO4BF2VFPdC8mkbCRV973gxMns
-        eTRVeZhMLOix+kVJrrxBPwsjxV0t2YMmuWsEQ4BMKobEoNOpccfv4lxx7jiVUBdcl1BdDngiffEwM6B9
-        E3WxB27C7BjVwuyYEa6/ikwqDm1QcWdnODxjINWm0r/1qOIhc3vASneKA8XDzn8g5m8iddUAIbJMnFcU
-        zHRFnRdGzHU1xKQmdgbyz5O6arA2NWcb86VZnbu2kak9YBU6Mjqqzp/N4YbzSV1xYJrGM6LQAZni7tXU
-        JT8wLSJhsSOk0cdIXRVgOgb5RZwzW8C5pPkpu4i65AesxG2ZHZ0njL23nkfqqgEXDsLHB5v2Q8o2GQ5o
-        URYlU3tAunpB7AiFVi+ppgyYOvE0FrMgLOyzpLaHHmW7RAe0mOsRUk05cN/hYQY8vkwMuq+nZntgbSM6
-        oKuum0lVG4D0OSY6YPKGS0lVG8jO/1jMkao28H9woLZDKGcTQwlLqtoA5P2dogN4DUKq2kDuQVZkAVUG
-        mvua53i7/au8Qf+73pDvG09XYBwFv2ObLxRYiTZkbo+cUgLelKpZyAHB5Z5Q4HtvKGDaSlfTYd/WwP3U
-        LT9kxZweUx4ndcUAKzoLiL2aQ7SQBAOb2tvbz6Jh5Mgpp6FSrPRTADKlk58QfwcNI4f0hQb2BqnLBoaN
-        nFjx0hj0L6Ph5Mh5pVRZvBJ1kbVhIZ5lpPJJU/cScyNvsz7TbYu3Bo7YbmxjcMFl2Yca7g1jz8IryWRS
-        sLKNQK6QIOneA53m4bEhc/tXb8PveyZ0jcElzTSsHHjjJjpgSUTZV44TEL/bRYJ2guS3HXjLIp+WtnDr
-        hH5xKFD4XQVeLLqyncAnAe8NDWRSEmDS70SSKGt3tZhP734qo01GfsvI66YvdCaM8JygYfMDss9s6dUi
-        d5yazLU4pMG/RaIPvL/GHDkWNr89/pm54eNnrDYxbNIS2vem6RP2gCUwFg1rD/vLXTaaUt1rTT73XDK3
-        hegArmbkyM4JkqPH95jrP1pXxMqfFk+X9yQNWxjW9brknjQteCUCqbYHr8fxAgyrWHx6Gdfr3PXc8p67
-        oUQ4Q2Jl32rzi58GJsgeGvu8KPIojaHAKNErHrjaeEMmc6IYeem9u3KINO9YZQ4d7c8gjhLavzk3bEQJ
-        +nuIVmko5y+myO5FUjLZThQkD9IYalpBlCaHOK+/BhzBP/l+lZGVCZwtZkuvV0oo7UR3EeSxACy6Qi0E
-        qwCMum6H2H/Rupbh7GsMM7xNAxmHbPUjkB+GffCOzt1Ptu7wbJCRQlm6/b68MZ8h3YGlNP30AKtKKbFi
-        JBio3F9QkwWWxI0h/ytSgrbi7yhYTk8lsKqEFT0kJysI2kx32ORDQ2fDbCzMsLbB3G4ddiD4/XRb0wq0
-        IXMBdXX/AQCi/cm5bwJPAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAV4SURBVFhH7VdrbBRVFF5BBV+QaHwQDRisus7M3aJEY/jR
+        tfuapcVg1BajITHRgGli/KHhoVJMiPEHUYLREFLa3a3WyAI/FAXCPu7dPqCoMQjlISESAmoVUAhld2dm
+        nes5w53tllnLtlSaGL/mZDt3zr3nu+d177j+x38ax+iMyfmkJGnUs1BnSkuOkW9zlJzJMreRZeS8npJ+
+        0pic0JlnZS7l8ZmU3MPjroli+tiBU++1Rlqp16myWafkeJZJBYMRPpzkmHsAdPcaTPngQrL6brHU2ACI
+        LM8l3H9kE8QsZ3w4Qe8ZTN6vZ0iNWG504Nx1TS4l31dgyuZSAxgigxKWTyvNeqfiNXs8d/B4w0ROpZvN
+        Ts8DGlMa84ysA+8cgDDmi8SSbl1Pk9fMvZ6bhImRAcmA4Z4sJX9ZCyZgQSp34E7RuFArC9jMBN4lTdcy
+        8gIjTb4pkqLuC5B7zea2qklCtXLoKWVTkQzsNE+VZae3VU0RrysCepnT6nvRo3a4cS09rSwWKi6TEQKe
+        WyQenUD3FxhZMrgrokEOreB90vVCZcQwO2fdDmtssYsBSUGlPqczOYLrg73nhaoTBvWErTyxJroNYP/W
+        qFx8CczeqimQV5+WbvTir/uCuUO6VagNBRoGAnHbvVjmPDF7qnh9ReDfzZ4KhDbYaWALhO9LoeJEfqf8
+        EJToMYs5k84ameoQ5oF4PSqYux6/oUCVV/NMOVVKxLKRJGYhpTQKVSe0tPJCseml5U6z+8FbxKtRAwkZ
+        VH4Cqwuq9MdSQthkzyeVO4WqE6C0rjiBknfE8JgAQnbdQOaRaTr1vKElyS8WoYzcAeM3ChUnDKrssQnl
+        MpJPDI85zCNVkwpUXihSYoIYdqI0zubuYVx5tYDd2CaELhbD44fSswfdKobHD9B3fi56CFq+GB4/QGV1
+        24SwY4vh8YPBPGtsQlqarL7Spoio3VA3wx8LN9VG1e3+aPBXf1TN+VtCJ33R4JZATH3aG6m7S6g6gbdC
+        +4yB0/57uGb8s/LlAJsJRNVGf2vwB39ENYAILyM5f5u6JxgNh8SsoTCpVGWklCNIKJuQskaGzB+tl5BM
+        TYt6ugwJh/ii6iFfa1gSUweBpQ551GofgHhhH8i4p4nXFSMQmzfd8kwZ46XyZMdTPBgLi+dgO/w5b5Nm
+        V7WsM+mk5SUgplHlC7N7zojONH8s2DRMmCx5dmMDj/e18dXdq3gASNVEfPnatnCdWGIQGCKNkheRkE0K
+        jpSP4ctjslC5LHyR0I5yJGxBr2zui/Ajp3fzw6d6eNPWV6xxmPeZWMIJIPGRneDYwTUqrc0lyMxKcgoW
+        77eNN2xs5KvYCv7M5w3WM3oGyRw908v39TP+fs+7PBC9GDZvq3pcLOHEuYT7Np2R9oufMcJT8DlTyJC3
+        L1d9UNZZNICGNh1AT+ziO47GedNXi/nWwx2WZ/b1U74itYyH2ussMpZE1PNiifIwex+bAneZ9Xb4BDFN
+        Z+4T8HXakk+T+dbXKdy38WappeRq2MSi+e3BnG3kzeQSfvD3Lssj+3/LWGTwf/RMKDZ3kAyIb0PwqDA9
+        PAoZz0tA5lAlX6wozXFv0Qh6AI3vh/DYYVqz6z0rkUvJoPjaAuuFyeHBV7ommGzW/ZDsL+NNsvRWUE7Y
+        14/yubFQ0ZDaXs+X7nyd957YzpvTy4eGSUhNVD0LHf1hYbIy4GUKw6in5DnQ1VfB8ZIGkv1IMEuVcxCu
+        Q3At3XJw5+yldbFAX6lB9EhjfAGEyUkGBZrjh95I5ZU8YuBx4I8EDpczfqnURkJd/tb6mWLqvwffJ2EJ
+        OnY7GC0m+SXypy8WXuvvuApkbOBxgB0Ymx72GTjfBvxQTb42db03Epw1NEwu19/Id93CjDLDqQAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEbSURBVFhH7ZKxagJBEECnERHLgBDID6SwsMhHpLTKp2i6
-        FGF34LA4vN1ErPIlNhY2fkEKQbAWQrAzcSfMGfAGtPBuEtwHr7nb23nsHkT+P84+gcfvSqRZR4lBEQ08
-        3v/4J3B4C96uITMfMLRtfqrE0FyFk3nf/6QZLsAnLX5bMaNRLZzOZB+T63AKaVrnVRXicFyI+fWNV1WE
-        w0ch4tA+ry6ZF9sNw7YHw4tm5guceeCvSsLbDnjzKQaImk2IuuOvz8zr83UYsiwOPaZZQYo3vMuZGAwa
-        YfNZcdip2jkkSZN3KxFxeFANKYZUQ4oh1ZBiSDWkGFINKYaM5DjTE1VDui5SDSmGVMMjikZypOsi1ZBi
-        SDWkGDJyOQDsAI7jC4Qq+LnFAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEcSURBVFhH7ZKxagJBEECnCSGkFAJCfsAiRQo/wtLKTzHp
+        wnHcDhyCx7GrYpUvSZMiTb4gRUBIHQghncYdmVPwBrTwbhT3wWvu9nYeuweB08eaJ3D4X4s0aychKKCB
+        w87Ko8BiC5z5hjz6gdzc8VMl8qThT+Zj/ZPm+AkuveG3NTOZXPjTeVnHFFp8hSy75FU1YnFaitn4zKtq
+        wuKjELHtA6+umJHp+mHzreFlh9ECbNLjryrCmXtw0a8YIBr9+ag2f31gxnHTD5mVh+4y/oIMb3mXAzEY
+        XPnN38rD9tW8Q5pe824VIg73qiHFkGpIMaQaUgyphhRDqiHFkIECm/RF1ZCui1RDiiHVcIiigQLpukg1
+        pBhSDSmGDJwPAEthyQtslwc9NwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFoSURBVGhD7ZS/SsRAEIfHP6WItYVg4RPYWNj4EFY2Vr5G
-        FM5k4xWHud0cvsJVFmLhUwgKvoAgCJaiWBg3d1OM+ONiVJIJ7gdfcbns8MHtDQUCgT8mN8VM1YOipepB
-        0VL1oGhpIFABujZS9aBoqXpQtFQ9KFoaCFSAro1UPShaqh4ULVUPipaqB0VL1YOipepB0VL1oGipCqyx
-        MO43ljMbI4oWycVXMORHxhc0Hi/w9IYYDFbImTscVMOhuaHTaJmnNswo3SAbP8Gw7/lIWX+dp7WES3co
-        672BuAp7r/7eb/OUlsmTAxw5Q5vs82klOHMCQ6FJn08potwiNr7EwZ8891tsnk8po9wm+fEtiJ7qzDXZ
-        aInfVsqZWfN/0Icv8Zm5p2G6ym8pJzdbPvhFxD/7e7/J33aEUbrn1+v7xDzZ5acdwyWH/hc44k8dpCjm
-        Jgb+JXIFarA2aEib1gYNadPaoCFtGggEAEQf/g+LqhB7wLwAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFCSURBVFhH7Ze9SgNBEIBHFES7dBaWeQCtfQCxTBEQ38Fn
+        CBrNDuIVZ/ZWAj7BFb6AhY2tdWp7LdRKRc8ZM/EHh2CRvVHcD77i/vY+bvfgDhL/i4CVqhlaDGuGFsMm
+        xgQsVc3Qpos1Q4thzQiurZoYo00Xa4YWw5qhxbBmaDGsGVoMa4YWw0Ynx2Uo3AXk3Rc1YJL53iN4HECW
+        LchoUyJ3q1DgUL3pJD2egT9YklGmSFXN0MAr9KTu1Rtr+t4N+KwpI0QiuC3yVg34rO9ewdH+mlwVEV4L
+        AXdoKh6+RXx4DX3XgrI9K1dFZtBZpPV0qoSMPMZDOO/Mydk1wVG8YAM+v4cU+ET7Ssi35+WsmvG9Ji3y
+        SwmiMHdCNuSoAfzmBVyH/u4dhQ3fAn8FATfJDdlK1MzoV+braxzNn3x/p6DEnwbgFXGQEn7E/VBNAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>236</value>
+    <value>34</value>
   </metadata>
 </root>
