--- a/vacations/vacations/mainGUI.resx
+++ b/vacations/vacations/mainGUI.resx
@@ -137,89 +137,89 @@
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAbWSURBVGhD7Zl7TFNXHMer02Vx2R+byaZzCkrmkNGL0Fac
-        PEovhd5y+wSqxjG3adREnbjhQHysGBEVZTqCmxOlxSkzauKEFh/zjctmlszNaIabYuami3EJ8nBQkP52
-        z/VcvL0cQEoVl/hNPsnNOb9z+vmV+2qQPc3T/E9ipaiXTQr5cpMy/DirDL3FKCmPSUkBj0oej8uezJgU
-        1EecaGunsAQ2kqo1KKjNRlXEVLU66Dm87InIIEOUfAdJulsmUldNqnAlXj+w4U6ZD4mSvcBEUo2skgrH
-        2wxMUlRhI0zK0GaS4MPARob/ZLPZnsHbPf5w334BSUzKyjQlXCpSw+ppqi5zRoXcjLcLTOzpyS8tTWfs
-        Oam687k2bWOujQHEsjS9Hpfwsctkg1MmUtelQmIEcdibxPPPDhqmx0T41kVR1XjL/mdpGpOcm5p8W5AW
-        k2Nl6nLTmdl2g2EYquU+PNJHRIRUXMzhZbE+tdyttoOVy1/kBfqTnDRdQpaZ9pDkfbAwf2Sn6+UmpTxT
-        LILoSVygrULrswZhjKIMWMO/ZGUkPZ+bxtwgCpPgmrCoInaKJVKjI3jB+rIEuFgY3UX8l3WToMGpgfav
-        uzbAPUPWYBX/wp3zi4miPTBLG3NFLCE0cL5ABVsyQro0sGn6WLi0IZrcgJLai1X8S3a67ixJEpH/DgNV
-        eSzc3G2EYwUpneOZKXSTWEJooDdIDXBP6B+xin/hhO4IYojlUxnYkZkCFz5n4Z7bCHDoAacKWb5mUWpS
-        u1jCGk15ScJSiA0oqStYxb8I4sXzGPhuYwo0H/CVloJquYveK5ZgVVQHSVgK8RSKoP7GKv5FaIAkS0Ko
-        F0sYVKFtLbu1RGkx9WW0zzpEipJqwir+ZW9W7AmhgTv7GLhQHNNFGo2hOXSMakvnT/lN/LqMjnPNcvBw
-        t0mSOAI1uFA/3ufU42g1KqjZWMW/eMqDm9AFKogWo7uISB6BxoTGUK2nIrjRqIiIQX9+oYH4N0JgHj0B
-        2ncmcsK+jXjKaZgZFwrqsaPbOuUVYX9xT+JorOF/OirGr4FDhi7SPcGtyUdr2ckRoziZ74UG6AkhUF8U
-        Cw2bY6GpJJ5DDXc2xcGtwhhA8w8akJ9FL4O8QCDiqTS0kURJoFq8jA/6gaJTzzsin1QEQRPWwPb5GXwT
-        YgpmzoXgsLVATS7w6uPmVM5VKIbi5YEJd7v8mSRL4l614TxeJlOnHg6Nt7rr1FY3vKEshldDPoEETdFt
-        aQPR0evr0VzopBJAtfGWqto448GxeJv+x3vEFO2pNHpJwmI8B7kaF6tAa9QWV8ZbrOseEkIoEnfxDQSF
-        5Xmvr45rFeQv25nmMaH5/JwqqYKv5TFUtsVbXKm8QCDirTbYSdJivG7jSlSrSXNNUbPujk4ZHheMkxfy
-        ouOiPvW4s9Nu71k081bwm2vb0FgItUFUi2FdHRqbi/9CAhJvNZsObl1XeRcDXpfl/rdltw+ZYj3Q3EWG
-        YzKzD157fRWMGr8SQk0LQLVkBsQVmUFTmgL0dhYSS6YDnf8BaBZuhoS0Kn5NvOVAg0wGg/m9AxHYKgMo
-        ewGgIvg+6Jgbw9OyBLOrQCouJnbORlAXWyHRqeuZLVNBM78Yr6vKw9v7F9OZ1rDRK46eG/aus722ZEwH
-        34QINIbmRi/79gf6vWM3pdI8qS7QrMwly/YAvSIXNNaqa1ilb7Gcaxhuqrnr0J9s6HjlYzcMmlYK89eu
-        8JFHoDE0NyKnGkxn/gX91jpImHHUpwF/5AXU2VkdWOnhYz7bPJGtabpmrmkBhLKslpccmuGA7MIl8OcX
-        I3nQMRpDcyrHZb4WYXTXAz3vNC+fsOAzohhCGlINgnYkW7Ba77Gebh5pPtlyQ5ARCMo7wYuSCF510qcW
-        YTraCPSsY/z5TJJCSEOqQWjKdHW2vbZnsWIPARjEffhZqQzPmRaILL0IwxcfgCFvO3iGZ34DUdsu8XOk
-        Nfo9lUQhAWlINQK0g7Fhy+5jqWnVk0T8Rbd/NVFGQBpSjYDGqduFNbuPqaZlJ0nEX7S73/eR6GvEaxOd
-        2lqs2X3Mp+7WkkT8RVtu8ZHoa8RrEx263n/cmI/fbSSJ+EsgG1Bv03BP5V5CkugPSQE8hWin7les2X1I
-        Ev2B2Z/vIyFFGlJNJ47kr7Dm44vWqZtKlMFIQ6oRoJ1J6XjbxxfFl4qh3MX3O0kIIQ2pBqF26q4+3IPs
-        EURbpkslSSGkIdXwlOsC+7+Cvob7K2wgij0MDt06vM3AxW63D6adyYVEwR5JXo/W4m0GPuitsqdrohNU
-        M9CnTXdBFzZ6MUPvNujezsk2IdDx/bGkdFSDy5/maR5dZLL/AN0pBHvQg5s2AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAbWSURBVGhD7Zl7UFRVHMdX06ax6Y9ypjRFVEyRYS/C7orK
+        Y9nLwl3Y98KiY2SlozRYYWoqPlpNRENJY7BMlF1NyUHNgl1UMl/QlNNMlqMTluJkaeNYg7ziJfvrnuu5
+        ePdyeLisYjN8Zz4zd875nbOf33JfO0gGMpD/ScwU9bxBJl1lkAd/o5UH3lLLqRaDnAIOhTQalz2eMcio
+        xaxoc4ewCG0oVaWTUdv0ipAUpdL/KbzsscggXZh0N0m6S6ZQVw2KYDle379hT5l3iJI9oA6l6rRyKhhv
+        0z9JVASNMMgnNJAEe4M2NPhHq9X6BN7u0Yf99rNJYmLWJMnhUq4S1s9UdJrTy6RGvJ1vYkuOf25Fssa2
+        3MKcz7Sq6zKtGkCsTEpIwCVcbBLJ4MQp1HWxkBBeHIrjOP7eTcOsiBDPujCqDG/Z96xI0sRnWuJv89JC
+        lps11ZnJmnk2nW4YqmU/PNRDRIBYXMixlZEeteyttl0rlT7LCfQly5OYmAytsoUk74FJ8/uy5ASpQS7N
+        EIoguhPnaS1Se6xB6MMoHdbwLktS457OTNLcIAqTYJswKUL2CiUs4SGcYE1hDFzMCe8k/vOmqVDrUEHb
+        550bYJ8hG7CKd2HP+UVE0W6Yq464IpTgGzifrYDtqQGdGtg6axxc2hxObkBOFWMV77IsmakkSSKyXtFA
+        6Vot3NyvhxPZiR3jGYl0vVCCb6AnSA2wT+gfsIp3YYXu8GKIVSka2J2RCBc+1sJdlx7g6H1O52i5mnRL
+        XJtQwhxOuUnCYogNyKkrWMW78OJ5aRr4dksiNBzxlBaDatmL3i2UYBRUO0lYDPEUCqH+wirehW+AJEuC
+        rxdK6BQTWpv2q4nSQmoKaY91iEQ5VY9VvEvxksiTfAN3DmrgQl5EJ2k0hubQMaotSJ/xq/B1GR1nGqXQ
+        wt4mSeII1OAbCeM9Tj2WZr2MmodVvEuj3b8eXaC8aB66iwjkEWiMbwzVNhb51ellIRHoz883ED0pANLo
+        ydC2N5YV9mykZQ8Nc6ICQek3srVDXhb0J/skDsca3qe9aOIGOKrrJN0d7JostFY7LWQUK/Md3wA9OQBq
+        ciOhdlsk1OdHsyjhztYouJUTAWj+fgPSSvQyyAn4Io0lulaSKAlUi5dxQT9QGGXacenUXPCfvAF2pady
+        TQjJnrMAxgZtBGra++6EqPklC2SyoXi5b8LeLn8iyZK4W6Y7j5dJlJZjgdFmV7XS7IJJ8jx4MeA9iFHl
+        3hY3EB6+sQbNBU7NB1QbbSqtitJ/NQ5v0/e4jxvCG7/Qu0nCQhoPszVOrQytUZqcqQrGeRcJIWSx+7gG
+        /INs7uu26c28/GWbpmFMYBY3p4gr4mo5dCWt0SanhRPwRdxlOhtJWojbpV+DalVJzhlKxtXeIcPhhPHS
+        HE50TNiHLa5lltsH3p5za/Sk9a1oLIDaLKjFMM52ldXJfSE+ibtMmwwuprO8UwNup+net2WzDZluPtzQ
+        SYZlmuYgjH5pHYyauAYCDQtBsXQ2ROUaQVWQCPQuLcTmzwI66y1QvbkNYpJKuTXRpsO1EgkM5vb2RWCH
+        BKDwGYCisfdAx+wYnpbEGJ3ZYnEhkfO3gDLPDLEOpnu2p4AqPQ+vK12Lt/cuhrPNQX6ry88Ne9XedjF/
+        TDvXhAA0hub8Vn79Pf3aiZtiaQ6LE1RrMsmy3UCvzgSVufQaVnmwmM7VDjdUNNrjTv3T/sK7Lhg0swDS
+        N672kEegMTQ3YnkZGM7+Cwk7qiFmdrlHA97I8ygXZ7Rjpd7HWNkwRVtRf81Y0QQIeWEVJzk01Q7LcpbC
+        H5+M5EDHaAzNKeyXuVqE3lUDdNoZTj5m4UdEMYQ4pBoEbY83YbWeYz7TMNJ4qukGL8Pjv/YkJ0pi7LpT
+        HrUIQ3kd0HNPcOczSQohDqkGoSpkqq3F1iexYjcBGMR+eKVYhuNsE4QWXIThi47AkJftHMMzvoSwnZe4
+        OdKahAMlRCEecUg1PLRdY8WWXcdU0ZxAEvEW5tB6ogyPOKQaHpWD2Yc1u46homkvScRb1Ptf95B40AjX
+        xjrUVViz6xhPN1aRRLxFvcfkIfGgEa6NtTM9/7gxljfWkUS8xZcNKHcq2adyDyFJ9IU4H55CtIP5BWt2
+        HZJEX9AcyvKQECMOqaYDe/xnWPPRRe1gUogyGHFINTy0Iy4Zb/voIvtUNpS9+H4jCSHEIdUglA7mau8e
+        ZA8h6kLGQpJCiEOq4djD+PZ/BQ8a9q+wmSjWG+zMJrxN/8Vmsw2mHfE5RMFuif8ArcXb9H/QW2V310QH
+        qKa/T5uugi5s9GKG3m3QvZ2VrUeg43tjccmoBpcPZCAPLxLJf9yVA7KJ1txzAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWXSURBVGhD7ZlbbBtFFIaDQCDBA0jcxAvyhZrLC6pQhUof
-        oFRqaJNWIGo7qgoSFyl9QDy2L6CCEI1QBSotKGkhtpO0XsdO0txdmiZOc3MS7DiJXGczTugNqHiilFKg
-        7e5hzu7Ytdfjm0jWqZRf+uXJzpkz39nZWY+VslWtalVLJ6h84n7ZbtwpWQ2tks00J1lN18Bugts2v8JC
-        V55kq8Em2QyX0oHTLVmNARa+siTZTft5wDzTVZmX7MYv5Crj42x4aSXbTB/xQPNZshuuyjbjmyxNaSTv
-        MK+nIDd5gIWYrtwt2WYoZ+n0F4UY1EIVa7rhL4L1uXtZSv0EVvMLPCCuq58FqHkRQNisfmr6ZbvZztLq
-        J8lm/FQLkuZUaP+2dB9Yr4k3ulha/UQnznx8ckFrnbYShhBLq5+UZ7dYaK3ZStAXwQWWVj/RN8h1pQAe
-        WDFWCjBdZ2n1k7r0S1MAmqXVT3d0AbJ7TYX0gfnvpSoAc8mCZQtLv/ySBMslcFsAPlmXBlP7zhqoo069
-        lmpuP+aguaTjloss/fJLKUCgBaSCUCNc3bvZC8jaT3PpWgAuNxYhdVfIGTBFWurdKiG87La8xtLrJ6mn
-        QuRBFWPMwdLpL8lf8T0PqhhL/sqjLJ3+knsrN/OgijHmYOlKI6lnW4AHVojp2CGWpnSCk5XP0Efpdx5g
-        LuMY2b/9aZamtJJPbt8IPZVXeKA8K/B0DBueoX2BwD1Oz/xXTg/5Etvs8vIKVwLaN3CB03xiA+S68w3e
-        xSedAhmm8IB2CGTCJRAz615eQV0ZgOtRAN/zAJ0bAXq3qsY2XsM+GsPC0+Q8ce4hh4fsc7rJnwje1CYq
-        VgrBawL5+Ih38UEWvjxSCijAGNvYOP3Ad83xp+ijUkXBnfUeci1x19sGojByYRJGqVv7o2oR1BiDsQ5B
-        tONYzKFMvFTiwfKMsRToRgIM7Wom4Dt1FgJiGMZ/nUhzQAyB91RMiUkdQ1fmpjLx/9E0IWsj4sIh6vhs
-        dOqvxdGjcPnkh/CH71W44XhMMbbxGvZhDMbSR+JfhPBS6J7JGRhe/DEDXOuhn0JKLI5hBVxlGMVrSlxc
-        NzUXH6IwkM01307AZwfHuX3HWtW7eKYAcK1xDI6td4vF/xQlhNwXEeO14RiReGAJI/zLb/Qo5hXh64or
-        EP3RzEdG6/7zA3Bo4nDy79PRKXUFPKS4L8KQKD5CJx/UwvB84MjtAmq+ySyg4we1gN7QdBqs1gi/s+Vt
-        2OQqh69ZEX46BsfihmZo+TURiz0cicXntCDZHJwmyQKwre3vG1lQINoGo0lYvMsIzIPHz0RfW4C9mZrJ
-        boaXWwBwVyRGerUQuewfiiUL8J+JZfSPRdQCjneIChTe3VTQbPDoY+3q90ODm6xliLkVEckuLUA+C50z
-        yQKErpmM/inqpha2keOhDOBs8IM0FsfUe8TfCjpmeAHujsQWFrQA+VzbFE4WgG1eTNdptYDOsVkFbgCL
-        aH1LAUfbfbug71x/Eh6NsTiG+jBDzK2wuLCJN3k+p76FsM2LGQ6rG7mRHhmCP0+mFcGDx5jE8cIhxF9i
-        iLlFX5kHeZPn897PR5IF7N0/wo1Be9rVVcA3SwI0sQdS4dH4xlLuvkBmcV8yxNyik4xpJy3E1XsCyQKq
-        9wxyY9ADQbYKLfMwej77lxqejZpa55VYV3PcxvDyi27gy7yJ89lW3ZcswL67jxuTsK9bXQU8uPHg0clD
-        HT1qF3z3UeHYwj+8SfO5vMqfLADbvJiEx2fi0OhVi+gKqhs61V2JjUvPPg1CzMLQVpbq3WSH0yNKCNod
-        nIHgL3TTUmNBeI2ee27Rz9L+UzCfHB7x/UQRLX1nFSt3Hq8J5D0WtrLlEsQtTrd4RQVXHxtawOus+84Q
-        /i52eOY76K+1dmyzyxyVlf0HY9v5j2z2M2sAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAWlSURBVGhD7ZlZbBtFGMeDQCDBA0hc4qFt7NBwvKAKVaj0
+        AUqlhJKkokrjjaqCxCGlD4jH9gVUEKIRqkClBSXpYTtOm3XO5mji0DRxmtvBiZPIcdbjhF5AxROllMNO
+        vB/z7Y5dez2+RGKnUv7SX97MfPPN75vZWa+VnHWta10rJyh+5mFZ0O0LluW2LBn08/49+jsg6OGu815n
+        oWtPclmuIWDYdCMaONrBMp2dha8tBQX9ER4wz0ulem9Q0H0ll+ueZsOzK9mg/4QHmsx+YcNt2aArZWmy
+        I3lv3ja/sGmJB5iK/YJ+WTbkFrJ0mReFGNBCpetA6cbrUPbigyxl5gRleS/zgLiueAGg8hUAsUD91PTL
+        Qp7A0mZOQYPucy1IlCOhbSXRPrpNE68zs7SZE5049vZJBK111E7kOlnazEm5d9OF1prtREDYcI2lzZzo
+        E+RvpQAeWDqmOTAXS5s5qVu/MgWgWdrM6Z4uQK7fXOT/KO+flSoAc8li/i6WfvUVEPNvQH0+wGdbo2Cq
+        3tsM1dSRbZHm9mMOmitgyb/O0q++lAJEWkAkCDXCVb8fv4C4/TRXRgvA7cYi/G1FcgxMmvZ3FwQRXq7P
+        f5Olz5yWOoskHlQ6xhwsXeYVtBWd5kGl46Ct+CRLl3nJ3cUFPKh0jDlYuuwo2FVi54Gl4uWukkGWJnuC
+        nuLn/bbC33mAiYxjZNvu51ia7Eru2b0DOopv8UB5VuDpGDY8Roft9gdMVu83Jiv5Gq9Z8+oKdwLatnOB
+        o3x+OyRa+drGxY0mkQxReEAbReIwiySPda+uoDoHwPwkQNNLAB07ALrfUo3X2IZ9NIaFR8l0/spjRis5
+        bLKQPxG8rlVSrBSCbSL5tKZx8VEWvjpSCkjBGGuxTD9yqsH3LL1Vyim4qcZK7oRWvbXfDcPXJmCEuqXP
+        rRZBjTEYaxQlAcdiDmXilRIPlmeMpUCBEBja3ECg6eIc2KVJGP/VEWW75ITGix4lJnIM3ZklZeL/o2lC
+        trikhePUvln31F+LIyfhZs/H8EfTGxAwPqUYr7EN+zAGY0/VET9CNFLorokZGFr8MQZc68GfnEosjlEK
+        qCe3GUb6mpIWt07N+wYpDMRz5fcO+OLYOLfvbIu6ipdTANcax+DYM+ek9H+KEkIeckm+KsesJ8gDCxnh
+        X9vTpZhXRFOnT4Hoc8feMlr3Xe2H444T4b8vuafUHbCS9L4InZL0BJ18QAvD89GauwVUfhdbQPsPagHd
+        zukoWK0Rfl/zu7DTXAjfsiJsdAyOxQPN0JLL4fE87przzWtB4nlsmoQLwGttf+/wggLROuAOw+IqIzAP
+        Hj9Dfa129mRqIAcYXmIBwH0uD+nWQiSybdATLsB22RPTP+pSCzjXLilQuLqRoPHg0Wfb1O+H2nqyhSEm
+        lksi+7UAySx2zIQLEDtnYvqnqOua2UH2OWOA48EP0Fgcc9rq+S2l14xGgPtdnoUFLUAyV9VNhgvAa15M
+        5yW1gI7RWQWuH4toeUcBRwtN+6H3Sl8YHo2xOIb6BENMrElpYSdv8mSOfArhNS9maFI9yBb6yjD280RU
+        ETx4jAm9XhhF36sMMbHoI/MYb/JkPvTlcLiAQ0eGuTFoa5u6C/hkCYGGzkAkPBqfWMrqi2QWzyVDTCw6
+        yah20lRccdAeLqDi4AA3Bt0/xnah2QsjV+N/qeG7UV2LV4k1N/gMDC+5XJL3Jm/iZDZU9IYLEA70cmNC
+        brqg7gK+uPHg0eGXOvqqnfLqoxyzC//yJk3mwnJbuAC85sWEPD7jA0ujWkTnmHqgI90ZOrj03adW9OQz
+        tLWlM/Vkr8nqDiLohbEZGPuFHlpqLAjbaizuZfqZ3X8KJpPRKn0YKqK5d06xsvLYJpIPWNjallmUdpks
+        7lsquHrbmKzS26z73hD+LjZave3011obXrNmjnJy/gMX9Pik2aV7OQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPTSURBVGhD7ZhdSFNhGMetoKDLPgi6b3YnEl1EN04jrU2p
-        zWVlN0Z1084oCdpmsKwIqxvxoklESB96UVZU065KJCJKVAixKCgV6YPQ0jQhz96eZ3vOOHv3zH3ozhbs
-        Dz88nvd5/8//2Xt2EAvyyiuvpZPVal1tNpsPlpaWdgLDJSUlv+Gn0CgrKyuh0twTBN8HIcf0gWWg5jmV
-        55Yg3EU5bDzgVN7DIJfgegNtz64gzBk5ZJJMwTB2ssmO4JneBkH+SsGSBgaYB8rJznhBiB45VKrACY46
-        HI6VZGmcoPEWLhBHnWOHaDtTLj7dsoR+yutwkjVka5xggEY5iB4t9OfbFiG6K6PoaKyIqgWvNrI1TtA4
-        5vHRf9JyaBnpJPrI1jjhs6sPzX3SidBOAr7II2RrnKDxLDbngqUCeqAX2RonasyGSgXNh2yN0389QLB9
-        k6W+dtufpRoAvYIdpl1kn3mpHaYxtb1QtJwqjwrjr9skWgH9PT3cOnqgl3rHNEr2mRcOIDpMUUEQDNd6
-        OP4AcdfBy9AB8LhDp/DEEowJkyJq124VwwfbTRVkb5zUgOUdFyoV0IPsjJfabbnOhUoFtdt6jeyMV7DL
-        upMLlQroQXbZkRqofM4FSwbY20s22ZN4at0Mj9IkF3AhcE+wu6qQbLKr4NMqswhYf3JBOULhYQ9tzw3h
-        SYiH29nAUTzYLnLmk5clWguEaFsvxN0iIR6ZhejaHQav8R6uQQ2V555CAyQBleeeuLAcVJ4bsiuni+0u
-        b4tN8X4Y6g+Mi8+Pheg7G37eb24Mg9d4D9aG3gTGsRb34F6yMV57Xe6t1S5vLyA06puaXwidvvn94mtz
-        M/0WFtbo9wC96EW2mVeFoqyqVjx+m9OtSkGEzemdnZz+/QODYvi3RUUhtCF+TU9PYE3sPvACT/SmNpnR
-        gXrfOpvL2yMH0ONvv9eDYb/fuBEZAIdBXYU1bo8GPFov97s8mfmf6Z7j7rXQZFhuKlNzomFkHjU5GRkA
-        r+GOimvcHonh6pO+NdR2ybSs2uXuYpqxPHvV93qmvz8ywMzAQOgeV8vi9AawZ7j1Esju8hxiG8XhWEPT
-        64nOzsgAE/fvh+5xtXFRGmqp/eLkcDhW2F3uj2yTOOCXcrDx3E9tgMHzF35xX/qFwFetz+dbTjHSF3z6
-        ZVyDRFw+dvyrNsCVo8oXriYRNsWz+D/47Iq3mTNPRI3TMzVQXCwQvOZqEoG9KUb6wlcbZ54Mt+wHZ2/a
-        9se891PgBcVIX/DeT+v4kSPO018Qbi0ZsDfFSF9gNCcbG8gcxcgrr7xYFRT8A3GuvRUSt2frAAAAAElF
-        TkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPiSURBVGhD7ZhdSFNhGMetoKDLPgi6b3UnEl1Egk4jrc1V
+        zmVfN0ZEUedUEuhOwYoi+riRLppEmFToRVmizHVVIlEUolEXFgWZEdkHWlk2y+3tebbnyNnrs/aRO1uw
+        P/zY8bzP+3/+zzlnh2FeTjnlNHOy2+3zrVbr9pKSkjZgoLCw8Dt8Cp3S0tJiKs0+QfAtEPKtMbAM1Nyj
+        8uwShDsth41FUVHRCxjkLBwvoe2ZFYQ5JodMkG/FxcVOssmM4JleDUF+S8ESBr4jkzBEGdmZLwjRLYdK
+        FriDQy6Xay5ZmidovJILxFHjWiuaj5WJ19ds4U95He5kNdmaJxjghBzEiB568LpNCH9FFK0nyqNqwauZ
+        bM0TNJ72+BivtBxaRroTvWRrnvDZNYbmrnQ89DsBr9Y3ZGueoPE4NueCJQN6oBfZmidqzIZKBt2HbM3T
+        fz1AqGWZ7WD1qp8zNQB6hVot68k+/frVankbbFkuLhwpiwrjrVkmGgHjOSPcOnqg16+rliGyT79wANFq
+        iQqCYLjGXbEHiLkOXqYOgLcbh5hot4WmhUmSia51QQwfarGUk715+t1pe86FSgb0IDvzFfTbLnOhkiHo
+        t18iO/MV6rKv40IlA3qQXWYU9FXc44IlwqSvoodsMidxx75iwl82ygX8G7gn5HcsJ5vMKnTHYRUd9i9c
+        UI5weNhD27NDeCdE+xo2cBS314isufKyRGOeEM2LhbiRL0SHVYiuDRHwGM/hGtRQefYpPEACUHn2iQvL
+        QeXZIadSV+BUtQubFe3l0z7fOzHYKUTv8cjzfnVpBDzGc7D29JHvHdbiHtxLNuZrs1q/qkrVegChU3um
+        4b4w6IPXK4YbGuiviLDGuAfoQS+yTb/KFWVeleL2OvYeCUpBhGOvNv5p7PtnDIrhn+Xnh9GH+Do2NoI1
+        0/eBF3iiN7VJj7bVehZVqlq3HMCIt+VmN4b92NQ0NQAOg7oIa9wenUpFe7BVdafnf6ab9tcvhCYDclOZ
+        6kNH3wQCgcnJ0dGpAfAYzgVxjdsjMVB12LOA2s6YZlWp9V1MM5a7D3sf/+jrmxrgR39/+BxXy3JA82HP
+        SOsZkFN172QbxWCPdubxSFvb1AAjt26Fz3G1MVGO7qD2/yaXyzXHqda/YpvEAL+UTzyeL/oAT06e+sp9
+        6f8Gvmo9Hs9sipG64OqXcg3icW7PvmF9gPO7lfdcTTwqFfe//+BzKloDZx6P6v3ub/0FBQLBY64mHtib
+        YqQufLVx5olwZeP28SbH1mnv/SS4TzFS10ZVS+n2I7sP1L1HuLVEwN4UI3WBUUA2NpEAxcgpp5xY5eX9
+        AR7KvAc1wUOGAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -240,5 +240,8 @@
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>400, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>32</value>
   </metadata>
 </root>
