--- a/vacations/vacations/PositionsFrm.resx
+++ b/vacations/vacations/PositionsFrm.resx
@@ -124,73 +124,73 @@
   <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMfSURBVFhH7VdNaxRBEN34edGAon/AD5D8AK+5ubPTPTOd
-        xYAYUUHIXYIHRdyDCOJFFMGTCAriTna7k6gBCeghBol4UiSiiELUSxIICvkw6li1WxsXpmayOzMeFB88
-        WNiu92p7q6urc//xT8MatTbLkeI+Ue3ps413XRpnsmDErPS9FcuI5cKg+iSM96Sg1WVhirYz7Ozpf96/
-        kcKzQ3epe4PUqiC154tB9T5vxHdpVBBHWLMM699I491wh9yuXJDrILn0kNo9BbsxJ331kzOPYz15Z9rW
-        6gjJJUaHqBR3CeOWOaMkFFpdPVA+uJ302wMmYxt3HH7hD048CfFvhKRuWaN9nWTTOnBnskxmlb5agcK/
-        RjZro9fvXQ8FDDXDiGVIoZ1jpVJpHdlGwxnusaSGAmZEsqSoqleWVrvJlgfszqZaEbdxmh5+GAvml+Zr
-        PP/0AruG5aBagV52ohTE7JKsQNODPsMKRHD840TQwMVnl9g1kayqx9BsowtcmuLhet9ggiOYJiE6dfvJ
-        Poz6dcAHRzHVDiG1Okf2YUjTM8kGxTCDhMbIPox8Rc2wQUQsYEygmTMLs5ROEEzNvQ59f2fqLqvVIF7I
-        ZB+GMPIbF9QgnqR28WLmJau1Sl8tkX0YcBSX2CDin0gor8UC2YeB28cFNYh9Buukmfg3NWDeDoe+Pz1+
-        ltX6Tfcd2YcBfWGCD4om1kkDmAC3JpZaPSD7MHDSY4NimDYhuGgHyD4MGDlsbFZcYBTTJJT31Rfw3Ev2
-        YeAMXB87eQGOaRKCe/Me3J9byD4MHMhxBm7n+sA+gycJuXYBN1F7i6LqHlpzBLHKbheMH9OsSJYcUhNW
-        2dpJtjGA1wEO5KxIhhQVzwa31l8iQntXsItyYmloG/EVTtYZsmkd4r7YBlPdTZyBOeEkxFMlq+5JfHCS
-        TXuAB95WHMg58STEnUmcTDPEkHsUZ+BEu4WnCZ7X+PIlufTAo4kDuWO84yD8qJXmWWt60GfwaMsRuQNk
-        sntKN1BL7LbViWMnTno4XEkjP9dGUeMt4kWJdxN8HsAOjE2vpafOf/y9yOV+Ae7SHTzQZQ9dAAAAAElF
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMfSURBVFhH7VdNaxRBEN34edGAon/AD5D8AK+5rbPTPTOd
+        xYAYUUHIXYIHRdyDCOJFFCEnERTESXa7k6gBCeghBol4UiSiiELUSxIICvkw6li1WxsXpmayOzMelDx4
+        sLBd79X2VldX59bxX8MatbbKkeIBUenqsY3XL40zWTD2rPS9lUPGXi4Mqs/CeE8LWl0Vpmg7w86+3he9
+        myk8O3SWOjdJrQpSewNiUH3IG/uHNCqII6xZhvVvpfFuukNuRy7ItZFcekjtnoHdmJO++sWZx7GWvDNt
+        a3WM5BKjTZSLe4Rxfc4oCYVW1/P+4Z2k3xowGdu44/ALf3LiSYh/IyR12xrtaSeb5oE7k2Uyq/TVChT+
+        DbJZG90D3RuhgKFmGLEMKbRzolQqbSDbaDjDXZbUUMCMSJYUFfXa0mov2fKA3dlSLeIWTtOjj2PB/NJ8
+        lRefXWLXsBxQK9DLTpWCmF2SZWh60GdYgQiOf5oI6rj8/Aq7JpIV9QSabXSBS1M8WusbTHAE0yREp+4g
+        2YdRuw744Cim2iGkVhfIPgxpuibZoBhmkNAY2YeRL6sZNoiIBYwJNHJmYZbSCYKpuTeh7+9O3WO16sQL
+        mezDEEZ+54LqxJPUKl7OvGK1VumrJbIPA47iEhtE/BsJ5bW9QPZh4PZxQXVin8E6aST+TXWYd8Oh78+O
+        n2e1/tB9T/ZhQF+Y4IOiiXVSBybArYmlVg/JPgyc9NigGKZNCC7aPrIPA0YOG5sVFxjFNAnlffUVPPeT
+        fRg4A9fGTl6AY5qE4N68D/fnNrIPAwdynIFbuT6wz+BJQq5dwA3U3qKouEfWHEEs3+2A8WOaFcmSQ2rC
+        8q3dZBsDeB3gQM6KZEhR9mxwa/4lIrR3DbsoJ5aGtrG/wck6RzbNQzwQO2Cqu4UzMCechHiqZMU9jQ9O
+        smkN8MDbjgM5J56EuDOJk2mEGHKP4wycaLfwNMHzGl++JJceeDRxIHeMdxKEHzfTPKtND/oMHm05IneB
+        THZP6Tqqid2x2nHsxEkPhytp5JfqKGq8Rbwo8W6Cz33YgbHpNfXUWce/i1zuN+UEHQ2UhVNSAAAAAElF
         TkSuQmCC
 </value>
   </data>
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAV4SURBVFhH7VdrbBRVFF5BBV+QaHwQDRisus7M3aJEY/jR
-        tfuapcVg1BajITHRgGli/KHhoVJMiPEHUYLREFLa3a3WyAI/FAXCPu7dPqCoMQjlISESAmoVUAhld2dm
-        nes5w53tllnLtlSaGL/mZDt3zr3nu+d177j+x38ax+iMyfmkJGnUs1BnSkuOkW9zlJzJMreRZeS8npJ+
-        0pic0JlnZS7l8ZmU3MPjroli+tiBU++1Rlqp16myWafkeJZJBYMRPpzkmHsAdPcaTPngQrL6brHU2ACI
-        LM8l3H9kE8QsZ3w4Qe8ZTN6vZ0iNWG504Nx1TS4l31dgyuZSAxgigxKWTyvNeqfiNXs8d/B4w0ROpZvN
-        Ts8DGlMa84ysA+8cgDDmi8SSbl1Pk9fMvZ6bhImRAcmA4Z4sJX9ZCyZgQSp34E7RuFArC9jMBN4lTdcy
-        8gIjTb4pkqLuC5B7zea2qklCtXLoKWVTkQzsNE+VZae3VU0RrysCepnT6nvRo3a4cS09rSwWKi6TEQKe
-        WyQenUD3FxhZMrgrokEOreB90vVCZcQwO2fdDmtssYsBSUGlPqczOYLrg73nhaoTBvWErTyxJroNYP/W
-        qFx8CczeqimQV5+WbvTir/uCuUO6VagNBRoGAnHbvVjmPDF7qnh9ReDfzZ4KhDbYaWALhO9LoeJEfqf8
-        EJToMYs5k84ameoQ5oF4PSqYux6/oUCVV/NMOVVKxLKRJGYhpTQKVSe0tPJCseml5U6z+8FbxKtRAwkZ
-        VH4Cqwuq9MdSQthkzyeVO4WqE6C0rjiBknfE8JgAQnbdQOaRaTr1vKElyS8WoYzcAeM3ChUnDKrssQnl
-        MpJPDI85zCNVkwpUXihSYoIYdqI0zubuYVx5tYDd2CaELhbD44fSswfdKobHD9B3fi56CFq+GB4/QGV1
-        24SwY4vh8YPBPGtsQlqarL7Spoio3VA3wx8LN9VG1e3+aPBXf1TN+VtCJ33R4JZATH3aG6m7S6g6gbdC
-        +4yB0/57uGb8s/LlAJsJRNVGf2vwB39ENYAILyM5f5u6JxgNh8SsoTCpVGWklCNIKJuQskaGzB+tl5BM
-        TYt6ugwJh/ii6iFfa1gSUweBpQ551GofgHhhH8i4p4nXFSMQmzfd8kwZ46XyZMdTPBgLi+dgO/w5b5Nm
-        V7WsM+mk5SUgplHlC7N7zojONH8s2DRMmCx5dmMDj/e18dXdq3gASNVEfPnatnCdWGIQGCKNkheRkE0K
-        jpSP4ctjslC5LHyR0I5yJGxBr2zui/Ajp3fzw6d6eNPWV6xxmPeZWMIJIPGRneDYwTUqrc0lyMxKcgoW
-        77eNN2xs5KvYCv7M5w3WM3oGyRw908v39TP+fs+7PBC9GDZvq3pcLOHEuYT7Np2R9oufMcJT8DlTyJC3
-        L1d9UNZZNICGNh1AT+ziO47GedNXi/nWwx2WZ/b1U74itYyH2ussMpZE1PNiifIwex+bAneZ9Xb4BDFN
-        Z+4T8HXakk+T+dbXKdy38WappeRq2MSi+e3BnG3kzeQSfvD3Lssj+3/LWGTwf/RMKDZ3kAyIb0PwqDA9
-        PAoZz0tA5lAlX6wozXFv0Qh6AI3vh/DYYVqz6z0rkUvJoPjaAuuFyeHBV7ommGzW/ZDsL+NNsvRWUE7Y
-        14/yubFQ0ZDaXs+X7nyd957YzpvTy4eGSUhNVD0LHf1hYbIy4GUKw6in5DnQ1VfB8ZIGkv1IMEuVcxCu
-        Q3At3XJw5+yldbFAX6lB9EhjfAGEyUkGBZrjh95I5ZU8YuBx4I8EDpczfqnURkJd/tb6mWLqvwffJ2EJ
-        OnY7GC0m+SXypy8WXuvvuApkbOBxgB0Ymx72GTjfBvxQTb42db03Epw1NEwu19/Id93CjDLDqQAAAABJ
-        RU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAV7SURBVFhH7VdrbBRVFF5BBV+QaHwQDRisbp2Zu0WJxpDg
+        2n3NUjQYtcVoSEw0YJoYf2h4qBQTYvxBlGA0BKHd3WqNLPBDUWi63b13+4CixiCUh4RICKhVQCF0uzsz
+        61zPGe5st8xatqXSxPg1J9u5c+493z2ve8f1P/7TOEZnTM61S5JGPYt0pmzMMvJtlpIzGeY2Moyc15PS
+        TxqTEzrzrMomPT6Tkrt43DVRTB87cOq92kgp83WqbNUpOZ5hUt5ghA8nA8zdD7p7Daa8n2mvulMsNTYA
+        IiuyCfcfmTZiljI+nKD3DCbv19PkUbHc6MC566psUr4nz5StxQYwRAYlLJdSGvQOxWt2e27j8dqJnEo3
+        mh2e+zSm1OUYWQ/eOQBhzBWIJdy6niKvmns9NwgTIwOSAcPdGUr+shZsgwWp3II7ReNCrSRgMxN4pzRd
+        S8sLjRT5pkCKujOQew3mjopJQrV86EllS4EM7DRHleWnd1RMEa/LAnqZ06q70aN2uHEtPaUsESoukxEC
+        nlssHp1A9+cZWTq4K6JBDq3kvdK1QmXEMDtm3QprbLOLAUlBpT6rMzmC64O954SqEwb1hK08sSa6DWD/
+        5qhcfBHMnoopkFefFm/0wq87Y7ZKNwu1oUDDQCBuuxfLnCdmTxWvLwv8u9lTgdAmOw1sgfB9KVScyLXJ
+        90OJHkPFASadNdJVIcwD8XpUMHc9cl2eKq/kmHKqmAhKJkHMfFKpE6pOaCnl+ULTS8kdZpf7JvFq1EBC
+        BpUfw+qCKv2xmBA22fPtyu1C1QlQWl+YQMnbYnhMACG7pj/94DSdel7X2skvFqG03ALj1wsVJwyq7LEJ
+        ZdOSTwyPOcwjFZPyVF4kUmKCGHaiOM7m7mFceaWA3dgmhC4Ww+OH4rMH3SqGxw/Qd34ueAhavhgeP0Bl
+        ddmEsGOL4fGDwTxrbUJaiqy53KaIqN5UM8MfC9dXR9Wd/mjwV39Uzfo3hk76osFtgZj6lDdSc4dQdQJv
+        hfYZA6f993DN+GflSwE2E4iqdf7G4A/+iGoAEV5Csv4mdU8wGg6JWUNhUqnCSCpHkFCmTRow0mTBaL2E
+        ZOZ+rJ4uQcIhvqh6yNcYlsTUQWCpQx412gcgXtj705XTxOuyEYg9Pt3yTAnjxfJEy5M8GAuL52Az/Dlv
+        k2Znlawz6aTlJSCmUeULs2vOiM40fyxYP0yYLHlmcy2P9zbxNV2reQBIzY1U56qbwjViiUFgiDRKXkBC
+        Nik4Uj6CL4/JQuWS8EVCraVI2IJe2dob4UdO7+aHT3Xz+u0vW+Mw7zOxhBNA4kM7wbGDa1Ral02QmeXk
+        FCzeZxuv3VzHV7OV/OnPa61n9AySOXqmh+/rY/y97nd4IHohbN5G9bhYwolzicpbdEaaL3zGCE/B50w+
+        Td66VPVBWQ+gATS05QB6YhdvPRrn9V8t4dsPt1ie2ddH+crkch5qrrHIWBJRz4slSsPseXgK3GU22OET
+        xDSdVZ6Ar9ONuRRZYH2dwn0bb5ZaUq6CTSxe0BzM2kbeaF/KD/7eaXlk/29piwz+j54JxeYNkgHxbQoe
+        FaaHRz7teRHIHCrnixWlIe4tGEEPoPH9EB47TGt3vWslcjEZFF9TYIMwOTz4KtcEk826F5L9JbxJFt8K
+        Sgn7+iE+LxYqGFKb5/Nlba/xnhM7eUNqxdAwCZkbVc9CR39AmCwPeJnCMOpJeQ509dVwvKSAZB8SzFDl
+        HITrEFxLtx1sm72sJhboLTaIHqmLL4QwOcmgQHP8wBspv5JHDDwO/JHA4VLGL5bqSKjT3zh/ppj678H3
+        SViCjt0MRgtJfpH86YuF1/lbrgAZG3gcYAfGpod9Bs63fj9Uk69J3eCNBGcNDZPL9TeYgN14RO9X8AAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEcSURBVFhH7ZKxagJBEECnCSGkFAJCfsAiRQo/wtLKTzHp
-        wnHcDhyCx7GrYpUvSZMiTb4gRUBIHQghncYdmVPwBrTwbhT3wWvu9nYeuweB08eaJ3D4X4s0aychKKCB
+        cnDcDhwix7GrYpUvSZMiTb4gRUBIHQghncYdmVPwBrTwbhT3wWvu9nYeuweB08eaJ3D4X4s0aychKKCB
         w87Ko8BiC5z5hjz6gdzc8VMl8qThT+Zj/ZPm+AkuveG3NTOZXPjTeVnHFFp8hSy75FU1YnFaitn4zKtq
         wuKjELHtA6+umJHp+mHzreFlh9ECbNLjryrCmXtw0a8YIBr9+ag2f31gxnHTD5mVh+4y/oIMb3mXAzEY
         XPnN38rD9tW8Q5pe824VIg73qiHFkGpIMaQaUgyphhRDqiHFkIECm/RF1ZCui1RDiiHVcIiigQLpukg1
-        pBhSDSmGDJwPAEthyQtslwc9NwAAAABJRU5ErkJggg==
+        pBhSDSmGDJwPAEsjWgtnzEaAWAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFCSURBVFhH7Ze9SgNBEIBHFES7dBaWeQCtfQCxTBEQ38Fn
-        CBrNDuIVZ/ZWAj7BFb6AhY2tdWp7LdRKRc8ZM/EHh2CRvVHcD77i/vY+bvfgDhL/i4CVqhlaDGuGFsMm
-        xgQsVc3Qpos1Q4thzQiurZoYo00Xa4YWw5qhxbBmaDGsGVoMa4YWw0Ynx2Uo3AXk3Rc1YJL53iN4HECW
-        LchoUyJ3q1DgUL3pJD2egT9YklGmSFXN0MAr9KTu1Rtr+t4N+KwpI0QiuC3yVg34rO9ewdH+mlwVEV4L
-        AXdoKh6+RXx4DX3XgrI9K1dFZtBZpPV0qoSMPMZDOO/Mydk1wVG8YAM+v4cU+ET7Ssi35+WsmvG9Ji3y
-        SwmiMHdCNuSoAfzmBVyH/u4dhQ3fAn8FATfJDdlK1MzoV+braxzNn3x/p6DEnwbgFXGQEn7E/VBNAAAA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFCSURBVFhH7Ze9SgNBEIBHFEQ7OwvLPIDWPoBYWgTEd/AZ
+        QgxmB/EgZ/ZWAj7BFb6AhY2tdWp7LdRKRc8ZM/EHh2CRvVHcD77i/vY+bvfgDhL/i4CVqhlaDGuGFsMm
+        xgQsVc3Qpos1Q4thzQiuqZoYo00Xa4YWw5qhxbBmaDGsGVoMa4YWw0YnxxUo3AX09l7UgEn2Oo/gcQBZ
+        tiCjTYncrUGBQ/Wmk/R4Bv5gWUaZIlU1QwOv0pO6V2+s6bs34LOGjBCJ4HbIWzXgs75zBUf763JVRHgt
+        BGzTVDx8i/jwGvpuC8rmrFwVmUFrkdbTqRIy8hgP4bw1J2fXBEfxgg34/B5S4BPtKyHfnZezasZ3G7TI
+        LyWIwtwJuSRHDeA3L+AG9Nt3FDZ8C/wVBNwmN2UrUTOjX5mvr3E0f/L9nYISfxqAV0SHEnlozTKzAAAA
         AElFTkSuQmCC
 </value>
   </data>
